--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.194.0/containers/docker-existing-dockerfile
 {
-	"name": "OhMyEnv",
+	"name": "OhMyRustEnv",
 	"context": "..",
 	"dockerFile": "./Dockerfile",
 	"settings": {},
@@ -16,8 +16,7 @@
 		"jnbt.vscode-rufo"
 	],
 	"runArgs": [
-		"--privileged",
-		// "--dns=114.114.114.114", // 如果你用的是长城宽带，在遇到网络不通的时候，可以删掉这一行
+		// "--dns=114.114.114.114",
 		"--network=network1"
 
 	],
@@ -25,7 +24,6 @@
 		"DISPLAY": "host.docker.internal:0.0"
 	},
 	"mounts": [
-    "source=docker,target=/var/lib/docker,type=volume",
 		"source=config,target=/root/.config,type=volume",
     "source=vscode-extensions,target=/root/.vscode-server/extensions,type=volume",
 		"source=ssh,target=/root/.ssh,type=volume",
